# ai-template

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
app/: demo.py  main.py
app/agents/: __init__.py
app/agents/example_agent/: agent.py
app/agents/extract_agent/: agent.py
app/agents/orchestrator/: agent.py
app/agents/search_agent/: agent.py
app/agents/synthesis_agent/: agent.py
app/agents/workers/extract_agent/: agent.py
app/agents/workers/search_agent/: agent.py
app/api/v0/: router.py
app/api/v0/endpoints/: example.py
app/core/: __init__.py  config.py  model.py
app/models/: conversation.py
app/repositories/: conversation_repository.py
app/tools/: __init__.py  datetime_tool.py
app/tools/curl/: extract.py  search.py
app/tools/date/: datetime_tool.py
app/tools/example/: tools.py
app/tools/redis/: redis_tools.py
app/utils/: database.py  redis.py  tavily.py
tests/agents/: test_orchestrator.py
tests/tools/: test_example.py
