[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "load-dotenv>=0.1.0",
    "pydantic-ai>=1.70.0",
    "pydantic-ai-slim[google,logfire,openai,openrouter]>=1.70.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
